# serial-monitor-rust

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  ios-cargo
.cargo/: config.toml
.github/workflows/: changelog.yml  deployment.yml  rust.yml
icons/: icon.ai  icon.xd
recipe/: meta.yml
src/: color_picker.rs  crc.rs  custom_highlighter.rs  data.rs  gui.rs  interface.rs  io.rs  main.rs  record.rs  serial.rs  settings_window.rs  stdio.rs  toggle.rs  update.rs  utils.rs  zmodem.rs
src/gui/: components.rs
wix/: main.wxs
