[package]
name = "serial-monitor-rust"
version = "0.3.7"
edition = "2021"
authors = ["Linus Leo Stöckli"]
description = "Serial Monitor and Plotter written in rust."
license = "GPL-3.0"
homepage = "https://github.com/hacknus/serial-monitor-rust"

[dependencies]
csv = "1.3"
egui_plot = "0.34"
egui_extras = { version = "0.33", features = ["all_loaders"] }
egui-phosphor = { version = "0.11" }
egui-theme-switch = "0.5"
egui_logger = "0.9"
egui-file-dialog = { git = "https://github.com/hacknus/egui-file-dialog", branch = "sort_by_metadata", features = ["information_view"] }
image = { version = "0.25", default-features = false, features = ["png"] }
preferences = { version = "2.0.0" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serialport = { version = "4.8", features = ["serde"] }
log = "0.4"
self_update = { git = "https://github.com/hacknus/self_update", features = ["archive-zip", "compression-zip-deflate"], optional = true }
tempfile = { version = "3.20", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "http2"], optional = true }
semver = { version = "1.0.27", optional = true }
crossbeam-channel = "0.5.15"
gumdrop = "0.8.1"

[target.'cfg(not(target_os = "ios"))'.dependencies]
eframe = { version = "0.33", features = ["persistence", "wayland", "x11"] }
keepawake = { version = "0.6" }
# ios:
[target.'cfg(target_os = "ios")'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu", # Use the wgpu rendering backend on iOS.
    "persistence",
] }

[features]
self_update = ["dep:self_update", "tempfile", "reqwest", "semver"]

[build-dependencies]
regex = "1.12"

[package.metadata.bundle]
name = "Serial Monitor"
identifier = "ch.hacknus.serial_monitor"
icon = ["./icons/install.png"]
copyright = "Copyright (c) hacknus 2025. All rights reserved."
category = "Developer Tool"
short_description = "Serial Monitor and Plotter written in rust."
long_description = "Serial Monitor and Plotter written in rust. Interface with serial devices with the ability to log to a file and plot the data."
osx_minimum_system_version = "10.12"
osx_url_schemes = ["ch.hacknus.serial_monitor"]
deb_depends = ["libclang-dev", "libgtk-3-dev", "libxcb-render0-dev", "libxcb-shape0-dev", "libxcb-xfixes0-dev", "libxkbcommon-dev", "libssl-dev"]

[package.metadata.wix]
dbg-build = false
dbg-name = false
name = "Serial Monitor"
no-build = false
output = "target/wix/SerialMonitorInstaller.msi"

[profile.release]
debug = true
